Fix for IE and overflow

--- a/scss/_featureinfo.scss
+++ b/scss/_featureinfo.scss
@@ -4,8 +4,7 @@
 }
 
 #o-identify-carousel > .o-identify-content {
-  max-height: calc(70vh - 46px);
-  overflow-y: hidden;
+  overflow-y:scroll;
 }
 
 .o-image-content {
@@ -13,4 +12,19 @@
   border-radius: 4px;
   padding: 5px;
   margin: 5px;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  #o-identify-carousel > .o-identify-content {
+    max-height: calc(70vh - 46px);
+    overflow-y: auto;
+  }
+  .o-image-content {
+    width: calc(100% - 12px);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    margin: 5px;
+    overflow: hidden;
+  }
 }
